# Awesome-crawl4AI

./: .editorconfig  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
backend/: .env.example  main.py  pytest.ini  requirements.txt
backend/api/: crawl.py  monitor.py  templates.py
backend/core/: crawler.py  scenario_registry.py  template_engine.py
backend/models/: __init__.py  database.py  task.py  template.py  tutorial.py
backend/scenarios/: __init__.py  academic_collector.py  docs_archiver.py  ecommerce_monitor.py  news_crawler.py  table_extractor.py
backend/schemas/: common.py  task.py  template.py
backend/tests/: __init__.py  conftest.py  test_api_crawl.py  test_api_templates.py  test_core.py  test_models.py
docs/: API.md  CI-CD-GUIDE.md  CI-CD-QUICKSTART.md  CODE-REVIEW-REPORT.md  CODING_STANDARDS.md  CONFIGURATION-SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT-TOOLS.md  PROJECT-SETUP-SUMMARY.md  SCENARIO_GUIDE.md  TESTING_STANDARDS.md  development-standards.md
frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  crawl.ts  template.ts  tutorial.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: CrawlTaskCard.vue  TemplateCard.vue
frontend/src/router/: index.ts
frontend/src/stores/: crawl.ts  template.ts
frontend/src/stores/__tests__/: crawl.test.ts  template.test.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  NotFound.vue  Results.vue  ScenarioTemplates.vue  Settings.vue  TemplateDetail.vue  TemplateEditor.vue  Tutorial.vue
tools/: verify_setup.py
