[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-crawl4ai"
version = "0.1.0-alpha"
description = "智能化网页数据采集框架，专为 AI 应用优化"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Awesome-crawl4AI Team", email = "team@example.com"}
]
maintainers = [
    {name = "Awesome-crawl4AI Team", email = "team@example.com"}
]
keywords = [
    "web-scraping",
    "crawler",
    "data-extraction",
    "ai",
    "llm",
    "automation",
    "web-crawling"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markdownify>=0.11.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
playwright = [
    "playwright>=1.40.0",
]
selenium = [
    "selenium>=4.15.0",
]
all = [
    "awesome-crawl4ai[playwright,selenium]"]

[project.urls]
Homepage = "https://github.com/your-org/awesome-crawl4ai"
Documentation = "https://awesome-crawl4ai.readthedocs.io"
Repository = "https://github.com/your-org/awesome-crawl4ai"
Issues = "https://github.com/your-org/awesome-crawl4ai/issues"

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["packages"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.bandit]
# 排除的目录和文件
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
]
# 测试列表
tests = ["B201", "B301"]
# 跳过的检查
skips = ["B101", "B601"]

# ================================
# Pydocstyle 配置
# ================================
[tool.pydocstyle]
# 文档字符串风格约定
convention = "google"
# 检查文件匹配模式
match = '(?!test_).*\.py'
# 不检查的文件
ignore = "docs/conf.py"
# 额外检查
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
# 最大行长度
max-line-length = 100

# ================================
# Pylint 配置
# ================================
[tool.pylint.main]
# 使用多个进程加速
jobs = 1
# Python 版本
py-version = "3.9"
# 解释器路径（可选）
# interpreter = "python3.9"

[tool.pylint.messages_control]
# 禁用的检查
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
# 最大行长度
max-line-length = 100
# 期望的缩进字符串
indent-string = "    "

[tool.pylint.basic]
# 良好的变量名模式
good-names = ["i", "j", "k", "ex", "Run", "_", "id"]

# ================================
# Coverage 配置
# ================================
[tool.coverage.run]
# 源码目录
source = ["packages"]
# 分支覆盖率
branch = true
# 并行模式
parallel = true
# omit 模式（排除的文件）
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# 排除的行
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\b:",
    "if 0:",
    "if False:",
    "if __debug__",
]
# 显示缺失行号
show_missing = true
# 精度
precision = 2

# ================================
# Pytest 配置扩展
# ================================
[tool.pytest.ini_options]
# 最小 pytest 版本
minversion = "7.0"
# 测试路径
testpaths = ["tests"]
# Python 文件匹配
python_files = ["test_*.py", "*_test.py"]
# Python 类匹配
python_classes = ["Test*"]
# Python 函数匹配
python_functions = ["test_*"]
# 命令行选项
addopts = [
    "-ra",                    # 显示摘要信息
    "--strict-markers",       # 严格标记模式
    "--strict-config",        # 严格配置模式
    "--showlocals",           # 显示局部变量
    "--cov=packages",         # 覆盖率配置
    "--cov-report=term-missing",  # 显示缺失行
    "--cov-report=html",      # HTML 报告
    "--cov-report=xml",       # XML 报告
]
# 标记定义
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "smoke: marks tests as smoke tests",
    "regression: marks tests as regression tests",
]
# 异步模式
asyncio_mode = "auto"
# 测试超时（秒）
timeout = 300
# 过滤警告
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ================================
# Ruff 配置（可选）
# ================================
[tool.ruff]
# 目标 Python 版本
target-version = "py39"
# 行长度
line-length = 100
# 源码目录
src = ["packages"]
# 排除的文件
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# 启用的检查
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]
# 忽略的检查
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
# 测试文件的忽略规则
"tests/*" = ["S101"]  # assert allowed in tests

[tool.ruff.lint.isort]
# isort 配置
known-first-party = ["awesome_crawl4ai"]
