# ================================
# Awesome-crawl4AI - setup.cfg
# ================================
# 此文件提供一些工具的额外配置
# 注意：主要配置在 pyproject.toml 中
# 此文件作为兼容性备份

# ================================
# Metadata 部分
# ================================
[metadata]
name = awesome-crawl4ai
version = attr: awesome_crawl4ai.__version__
description = 智能化网页数据采集框架，专为 AI 应用优化
long_description = file: README.md
long_description_content_type = text/markdown
author = Awesome-crawl4AI Team
author_email = team@example.com
url = https://github.com/your-org/awesome-crawl4ai
project_urls =
    Bug Tracker = https://github.com/your-org/awesome-crawl4ai/issues
    Documentation = https://awesome-crawl4ai.readthedocs.io
    Source Code = https://github.com/your-org/awesome-crawl4ai
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: Chinese (Simplified)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords =
    web-scraping
    crawler
    data-extraction
    ai
    llm
    automation
    web-crawling
python_requires = >=3.9
packages = find:
package_dir =
    = packages
include_package_data = True
zip_safe = False

# ================================
# Options 部分
# ================================
[options]
zip_safe = False
include_package_data = True
package_dir =
    = packages
packages = find:

# ================================
# Options.packages.find
# ================================
[options.packages.find]
where = packages

# ================================
# Options.extras_require
# ================================
[options.extras_require]
# 开发依赖
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.5.0
    pre-commit>=3.3.0

# Playwright 浏览器自动化
playwright =
    playwright>=1.40.0

# Selenium 浏览器自动化
selenium =
    selenium>=4.15.0

# 所有可选依赖
all =
    %(playwright)s
    %(selenium)s

# ================================
# Options.entry_points
# ================================
[options.entry_points]
# 命令行接口
console_scripts =
    crawl4ai = awesome_crawl4ai.cli:main
    crawl4ai-extract = awesome_crawl4ai.extractors.cli:main

# ================================
# Flake8 配置
# ================================
[flake8]
# 最大行长度（与 black 一致）
max-line-length = 100
# 忽略的错误和警告
extend-ignore =
    E203  # whitespace before ':' (与 black 兼容)
    W503  # line break before binary operator (与 black 兼容)
    E501  # line too long (由 black 处理)
# 排除的目录
exclude =
    .git
    __pycache__
    .tox
    .eggs
    *.egg
    build
    dist
    .venv
    venv
    .mypy_cache
# 最大复杂度
max-complexity = 18
# 显示源代码
show-source = true
# 显示统计信息
statistics = true
# 启用的扩展
enable-extensions =
    G  # flake8-logging-format

# ================================
# Pydocstyle 配置
# ================================
[pydocstyle]
# 文档字符串风格
convention = google
# 检查的文件模式
match = (?!test_).*\.py
# 不检查的文件
ignore = docs/conf.py
# 额外忽略的错误码
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107
# 最大行长度
max-line-length = 100

# ================================
# Mypy 配置
# ================================
[mypy]
# Python 版本
python_version = 3.9
# 警告配置
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
# 严格模式选项
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
strict_equality = True
# 导入跟随
follow_imports = normal
# 显示错误代码
show_error_codes = true
# 显示列号
show_column_numbers = true

# ================================
# Coverage 配置
# ================================
[coverage:run]
# 源代码目录
source = packages
# 分支覆盖率
branch = true
# 并行模式
parallel = true
# omit 模式（排除的文件）
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*

[coverage:report]
# 排除的行
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
    @abc.abstractmethod
    class .*\bProtocol\b:
    if 0:
    if False:
    if __debug__
# 显示缺失行号
show_missing = true
# 精度
precision = 2
# 按排序显示
sort = Cover

# ================================
# Pytest 配置
# ================================
[tool:pytest]
# 最小版本
minversion = 7.0
# 测试路径
testpaths = tests
# Python 文件匹配
python_files = test_*.py *_test.py
# Python 类匹配
python_classes = Test*
# Python 函数匹配
python_functions = test_*
# 命令行选项
addopts =
    -ra
    --strict-markers
    --strict-config
    --showlocals
# 标记定义
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    smoke: marks tests as smoke tests
    regression: marks tests as regression tests
# 异步模式
asyncio_mode = auto
# 过滤警告
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

# ================================
# Tox 配置（可选）
# ================================
[tox:tox]
# 最小 Tox 版本
minversion = 4.0
# 测试环境列表
envlist = py39,py310,py311,py312,flake8,mypy
# 跳过缺失解释器
skip_missing_interpreters = true

[testenv]
# 使用的依赖
deps =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
# 命令
commands =
    pytest {toxinidir}/tests

[testenv:flake8]
deps =
    flake8>=6.0.0
commands =
    flake8 {toxinidir}/packages {toxinidir}/tests

[testenv:mypy]
deps =
    mypy>=1.5.0
commands =
    mypy {toxinidir}/packages

# ================================
# Bandit 配置
# ================================
[bandit]
# 排除的目录
exclude_dirs =
    /test/
    /tests/
# 测试列表
tests = B201,B301
# 跳过的检查
skips = B101,B601

# ================================
# isort 配置
# ================================
[isort]
# 配置文件（与 black 兼容）
profile = black
# 行长度
line_length = 100
# 多行输出样式
multi_line_output = 3
# 包含尾随逗号
include_trailing_comma = true
# 强制网格包装
force_grid_wrap = 0
# 使用括号
use_parentheses = true
# 确保注释前换行
ensure_newline_before_comments = true
# 已知第三方库
known_third_party =
    aiohttp
    httpx
    pydantic
    pytest
    setuptools

# ================================
# Bdist_wheel 配置
# ================================
[bdist_wheel]
# 通用 wheel
universal = 0

# ================================
# Egg_info 配置
# ================================
[egg_info]
# 标签构建
tag_build =
# 标签日期
tag_date = 0

# ================================
# Aliases（快捷别名）
# ================================
[aliases]
# 测试别名
test = pytest
# 格式化别名
format = black isort
# 类型检查别名
typecheck = mypy
# 代码检查别名
lint = flake8
# 发布检查
release = dist mkmul sdist bdist_wheel upload

# ================================
# 工具说明
# ================================
#
# setup.cfg 是传统的配置文件，很多工具仍然支持
# 但对于新项目，建议优先使用 pyproject.toml
#
# 配置优先级：
# 1. pyproject.toml（现代标准）
# 2. setup.cfg（传统配置）
# 3. setup.py（动态配置，已过时）
#
# 如果某个工具在 pyproject.toml 中的配置不生效，
# 可以尝试在 setup.cfg 中添加对应配置
